# nudibranch

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  FREE_APIS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PHASE3_PROGRESS.md  README.md  SPOT_MANAGEMENT.md  TIDE_API_UPGRADE.md  TIDE_FALLBACK_SYSTEM.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: spots.yaml  thresholds.yaml  tide_stations.yaml
examples/: test_cache.py  test_complete_dashboard.py  test_conditions_table.py  test_copernicus_auth.py  test_copernicus_info.py  test_full_aggregator.py  test_open_meteo_live.py  test_safety_assessment.py  test_smooth_tide_curve.py  test_spot_management.py  test_tide_panel.py  test_tides_live.py  test_tui_skeleton.py  test_visibility_estimation.py  test_weather_display.py
src/nudibranch/: __init__.py  aggregator.py  cache.py  config.py  models.py  safety.py  visibility.py
src/nudibranch/clients/: __init__.py  copernicus.py  open_meteo.py  tide_stations.py  tides.py
src/nudibranch/tui/: __init__.py  app.py
src/nudibranch/tui/widgets/: __init__.py  charts.py  conditions_table.py  help_screen.py  map_tile.py  spot_manager.py  tide_panel.py  wind_grid.py
tests/: test_aggregator.py  test_cache.py  test_config.py  test_copernicus.py  test_open_meteo.py  test_safety.py  test_spot_manager.py  test_tides.py  test_tui_app.py  test_visibility.py
